# m3di

./: .gitignore  CMakeLists.txt  COPYING  INSTALL  README.md
census/: 4_1.json  generate.py  m003.json  m004.json  m006.json  m007.json  m009.json  m010.json  m011.json  m015.json  m016.json  m017.json  m019.json  m022.json  m023.json  m026.json  m027.json  m029.json  m030.json  m032.json  m033.json  m034.json  m035.json  m036.json  m037.json  m038.json  m039.json  m040.json  m043.json  m044.json  m045.json  m046.json  m047.json  m049.json  m052.json  m053.json  m054.json  m055.json  m058.json  m059.json  (+248 more)
src/: CMakeLists.txt  Makefile  constants.h  install.sh  integrals.cpp  integrals.h  integrate.cpp  integrate.h  integrator.cpp  integrator.h  io.cpp  io.h  kahan.cpp  kahan.h  main.cpp  main.h  manifold.cpp  manifold.h  modes.cpp  modes.h  precompute.cpp  precompute.h  stats.cpp  stats.h  tabulation.cpp  tabulation.h  transcendental.cpp  transcendental.h  write.cpp  write.h
tests/: 4_1.json  5_2.json  NaN.json  malformed0.json  malformed1.json  malformed10.json  malformed11.json  malformed12.json  malformed13.json  malformed14.json  malformed3.json  malformed4.json  malformed5.json  malformed6.json  malformed7.json  malformed8.json  malformed9.json  performance.py  run_tests.py
utils/: gather_plot_data.py
